force-app/main/default/objects/Doctor_Facility_Association__c/Doctor_Facility_Association__c.object-meta.xml
<CustomObject>
    <label>Doctor Facility Association</label>
    <nameField>
        <label>Doctor Facility Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctor Facility Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>