force-app/main/default/objects/Doctor_Facility_Association__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <label>Doctor</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Doctor Facility Associations</relationshipLabel>
    <relationshipName>Doctor_Facility_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>