force-app/main/default/objects/Doctor_Facility_Association__c/fields/Medical_Facility__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility__c</fullName>
    <label>Medical Facility</label>
    <referenceTo>Medical_Facility__c</referenceTo>
    <relationshipLabel>Doctor Facility Associations</relationshipLabel>
    <relationshipName>Doctor_Facility_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>